[tool.poetry]
name = "alekorn_brain_games"
version = "0.5.6"
description = "CLI games. My first programming project as part of a python course from hexlet.io"
authors = ["alekorn <entkorn@gmail.com>"]
packages = [
    { include = "brain_games" },
  ]
repository = "https://github.com/alekorn/python-project-lvl1"
classifiers = ["Development Status :: 4 - Beta"]
[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression= "brain_games.scripts.brain_progression:main"
brain-prime= "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

